Fix OrderResponse and ConvertStock Quantity to Long